# relay

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: bench.yml  ci.yml  publish-npm.yml  publish-pypi.yml  release.yml
benchmarks/: bench_decode.py  bench_encode.py  bench_vs_json.py  bench_vs_msgpack.py
benchmarks/results/: latest.json
docs/: CHANGELOG.md  cli_reference.md  compat_guide.md  delta_guide.md  faq.md  index.md  quickstart.md  reference_guide.md  schema_guide.md  text_format.md  types_reference.md  wire_format.md
relay/: __init__.py  decoder.py  delta.py  encoder.py  errors.py  payload.py  reference.py  registry.py  schema.py  schema_compile.py  session.py  text_decoder.py  text_encoder.py  types.py  validate.py
relay-js/: jest.config.cjs  package.json  rollup.config.js  tsconfig.json
relay-js/src/: errors.ts  index.ts  registry.ts  schema.ts  types.ts
relay-js/tests/: smoke.test.ts
relay/cli/: __init__.py  main.py
relay/cli/commands/: __init__.py  bench.py  convert.py  inspect.py  schema.py  validate.py
relay/compat/: __init__.py  anthropic_compat.py  json_compat.py  openai_compat.py
spec/: RELAY_ERRORS.md  RELAY_REFERENCE.md  RELAY_SCHEMA_REGISTRY.md  RELAY_SPEC.md  RELAY_TEXT_FORMAT.md  RELAY_TYPES.md
tests/: conftest.py  test_cli_coverage.py  test_cov_compat_inspect.py  test_cov_decode_wire.py  test_cov_decoder_internal_scalar.py  test_cov_encoder_errors.py  test_cov_ref_reg_schema.py  test_cov_reference_edges.py  test_cov_text_decoder_errors.py  test_cov_text_encoder_branches.py  test_cov_text_intrinsics.py  test_coverage_wave1.py  test_coverage_wave2.py  test_coverage_wave3.py  test_encoder_decoder.py  test_hypothesis_roundtrip.py  test_text_delta_session_reference.py  test_types.py
tests/fixtures/sample_schemas/: agent_tool_call.rschema  simple.rschema
